Refactor scheduler initialization and process configuration
- Modify app.py to prevent scheduler auto-start in web application
- Update scheduler_process.py to use environment-based database configuration
- Add explicit database initialization in scheduler process
- Enhance supervisord.conf with environment variables for Flask and scheduler
- Improve logging and error handling in scheduler process

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -7,6 +7,7 @@ childlogdir=/var/log
 [program:gunicorn]
 command=gunicorn --bind 0.0.0.0:5000 --workers 4 --threads 2 --worker-class gthread --worker-connections 1000 --timeout 120 --keep-alive 5 --max-requests 1000 --max-requests-jitter 100 --log-level info --name taskflow --preload app:app
 directory=/app
+environment=FLASK_APP="app.py",FLASK_ENV="production",PYTHONPATH="/app"
 user=root
 autostart=true
 autorestart=true
@@ -19,6 +20,7 @@ priority=900
 [program:scheduler]
 command=python scheduler_process.py
 directory=/app
+environment=FLASK_APP="app.py",FLASK_ENV="production",PYTHONPATH="/app"
 user=root
 autostart=true
 autorestart=true
