--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,33 +1,38 @@
 [supervisord]
 nodaemon=true
-logfile=/var/log/supervisord.log
+logfile=/dev/stdout
+logfile_maxbytes=0
 pidfile=/var/run/supervisord.pid
 childlogdir=/var/log
 
 [program:gunicorn]
-command=gunicorn --bind 0.0.0.0:5000 --workers 4 --threads 2 --worker-class gthread --worker-connections 1000 --timeout 120 --keep-alive 5 --max-requests 1000 --max-requests-jitter 100 --log-level info --name taskflow --preload app:app
+command=gunicorn --bind 0.0.0.0:5000 --workers 4 --threads 2 --worker-class gthread --worker-connections 1000 --timeout 120 --keep-alive 5 --max-requests 1000 --max-requests-jitter 100 --log-level info --name taskflow --preload --access-logfile - --error-logfile - app:app
 directory=/app
-environment=FLASK_APP="app.py",FLASK_ENV="production",PYTHONPATH="/app"
+environment=FLASK_APP="app.py",FLASK_ENV="production",PYTHONPATH="/app",PYTHONUNBUFFERED="1"
 user=root
 autostart=true
 autorestart=true
 startsecs=5
 stopwaitsecs=60
-stdout_logfile=/var/log/gunicorn.log
-stderr_logfile=/var/log/gunicorn.err
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 priority=900
 
 [program:scheduler]
-command=python scheduler_process.py
+command=python -u scheduler.py
 directory=/app
-environment=FLASK_APP="app.py",FLASK_ENV="production",PYTHONPATH="/app"
+environment=FLASK_APP="app.py",FLASK_ENV="production",PYTHONPATH="/app",PYTHONUNBUFFERED="1"
 user=root
 autostart=true
 autorestart=true
 startsecs=10
 stopwaitsecs=60
-stdout_logfile=/var/log/scheduler.log
-stderr_logfile=/var/log/scheduler.err
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 priority=1000
 depends_on=gunicorn
 
