--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,6 +4,7 @@ logfile=/dev/stdout
 logfile_maxbytes=0
 pidfile=/var/run/supervisord.pid
 childlogdir=/var/log
+user=root
 
 [program:gunicorn]
 command=gunicorn --bind 0.0.0.0:5000 --workers 4 --threads 2 --worker-class gthread --worker-connections 1000 --timeout 120 --keep-alive 5 --max-requests 1000 --max-requests-jitter 100 --log-level info --name taskflow --preload --access-logfile - --error-logfile - app:app
