--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
 Flask==2.3.3
-Scrapy==2.11.0
-SQLAlchemy==2.0.21
-Flask-SQLAlchemy==3.1.1
 Flask-Login==0.6.2
-Flask-Migrate==4.0.5
+Flask-Migrate==4.0.4
+Flask-SQLAlchemy==3.0.5
+Flask-WTF==1.1.1
+SQLAlchemy==2.0.20
 Werkzeug==2.3.7
+WTForms==3.0.1
+alembic==1.11.3
 APScheduler==3.10.4
-python-dotenv==1.0.0
-Flask-WTF==1.2.1
-email-validator==2.1.0.post1
-beautifulsoup4==4.12.3
 gunicorn==21.2.0
-supervisor==4.2.5 
+psycopg2-binary==2.9.7  # PostgreSQL adapter
+python-dotenv==1.0.0
+requests==2.31.0
+supervisor==4.2.5
+tzlocal==5.0.1
+aiohttp==3.8.5 
