--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,5 @@ python-dotenv==1.0.0
 requests==2.31.0
 supervisor==4.2.5
 tzlocal==5.0.1
-aiohttp==3.8.5 
+aiohttp==3.8.5
+bcrypt==4.0.1  # For password hashing 
